# tuesday

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile
cmake/: tue_utils.cmake
examples/: CMakeLists.txt  example0.cpp  example_gfx.cpp  example_sg.cpp  example_wsi.cpp  helpers.hpp  render_context.hpp  scene.hpp
examples/demo1/: CMakeLists.txt  main.cpp  particles_system.hpp
examples/demolib/: CMakeLists.txt  base_app.cpp  base_app.hpp  base_scene.hpp  demo_app.hpp  helpers.hpp  render_context.hpp
include/tuesday/: assert.hpp  ecs.hpp  gfx.hpp  mp.hpp  sg.hpp  utility.hpp  wsi.hpp
include/tuesday/ecs/: assoc_vector.hpp  component.hpp  entity.hpp  registry.hpp  system.hpp
include/tuesday/gfx/: draw.hpp  gl.hpp  shader.hpp  vertex_array.hpp
include/tuesday/mp/: meta.hpp  tseq.hpp  tseq_ops.hpp
include/tuesday/sg/: scene_context.hpp  scene_node.hpp  scene_object.hpp  scene_query.hpp
include/tuesday/utility/: assoc_vector.hpp  noncopyable.hpp
include/tuesday/wsi/: keyboard.hpp  window.hpp  window_attrs.hpp  window_client.hpp  window_events.hpp
src/: CMakeLists.txt  glfw.cpp  glfw.hpp  shader.cpp  window.cpp
tests/: CMakeLists.txt  assoc_vector.cpp  entity.cpp  tseq.cpp
